--- a/carSharingNow/carSharingNow.zip_expanded/carSharingNow/src/main/resources/application.properties
+++ b/carSharingNow/carSharingNow.zip_expanded/carSharingNow/src/main/resources/application.properties
@@ -3,3 +3,8 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+server.port=${PORT:8080}
+vaadin.urlMapping=/*
+
+spring.security.user.name=test
+spring.security.user.password=test
